--- a/WolffTrade/WolffTrade.OrderService.Application/WolffTrade.OrderService.Application.csproj
+++ b/WolffTrade/WolffTrade.OrderService.Application/WolffTrade.OrderService.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WolffTrade.OrderService.Domain\WolffTrade.OrderService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
