--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore WolffTrade.sln
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build WolffTrade.sln --no-restore --configuration Release
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test WolffTrade.sln --no-build --configuration Release --verbosity normal
