--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore WolffTrade.sln
+      run: dotnet restore WolffTrade/WolffTrade.slnx
     - name: Build
-      run: dotnet build WolffTrade.sln --no-restore --configuration Release
+      run: dotnet build WolffTrade/WolffTrade.slnx --no-restore --configuration Release
     - name: Test
-      run: dotnet test WolffTrade.sln --no-build --configuration Release --verbosity normal
+      run: dotnet test WolffTrade/WolffTrade.slnx --no-build --configuration Release --verbosity normal
